test/libyul/yulSyntaxTests/invalid_type.yul
{
    let x: invalidType
}
// ----
// ParserError 5473: (10-24): Types are not valid in untyped Yul.
